--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <title>Carrinho</title>
 </head>
 
-<body onload="renderCart()">
+<body onload="fetchCart()">
     <header>
         <a href="index.html" class="logo"><span>Night</span>code</a>
 
