--- a/login.html
+++ b/login.html
@@ -5,28 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/auth.css">
     <title>Acessar Conta</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="center">
+        <div class="left">
+            <img src="img/auth.svg" alt="">
+        </div>
+        <div class="right">
             <h1>Acessar Conta</h1>
             <div class="input-field">
-                <input type="email" id="email" placeholder="E-mail de usuário">
+                <label>Digite seu e-mail</label>
+                <input type="email" id="loginemail" placeholder="E-mail de usuário">
+                <i class="fas fa-envelope"></i>
             </div>
             <div class="input-field">
-                <input type="password" id="password" placeholder="Digite sua senha">
+                <label>Digite sua senha</label>
+                <input name="passw" type="password" id="loginpassword" placeholder="Digite sua senha">
+                <i class="fas fa-key"></i>
             </div>
             <div class="input-field">
-                <button id="login">Acessar</button>
+                <button id="login" onclick="userLogin()">Acessar</button>
             </div>
+            <br />
             <p>Não possui conta? <a href="register.html"> Criar Conta</a></p>
         </div>
     </div>
     <script src="js/middleware/isAuth.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/user.js"></script>
 </body>
-
 </html>
