--- a/register.html
+++ b/register.html
@@ -5,31 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/auth.css">
     <title>Registro de usuários</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="center">
-            <h1>Criar Conta</h1>
-            <div class="input-field">
-                <input type="text" id="name" placeholder="Nome de usuário">
-            </div>
-            <div class="input-field">
-                <input type="email" id="email" placeholder="E-mail de usuário">
-            </div>
-            <div class="input-field">
-                <input type="password" id="password" placeholder="Digite sua senha">
-            </div>
-            <div class="input-field">
-                <button id="register">Enviar</button>
-            </div>
-            <p>Já possui conta? <a href="login.html"> Login</a></p>
+       <div class="left">
+           <img src="img/auth.svg" alt="">
+       </div>
+       <div class="right">
+        <h1>Criar Conta</h1>
+        <div class="input-field">
+            <label>Nome do usuário</label>
+            <input type="text" id="name" placeholder="Nome de usuário">
+            <i class="fas fa-user"></i>
         </div>
+        <div class="input-field">
+            <label>Seu melhor e-mail</label>
+            <input type="email" id="email" placeholder="E-mail de usuário">
+            <i class="fas fa-envelope"></i>
+        </div>
+        <div class="input-field">
+            <label>Digite sua senha</label>
+            <input type="password" id="password" placeholder="No mínimo 6 characteres">
+            <i class="fas fa-key"></i>
+        </div>
+        <div class="input-field">
+            <label>Confirme sua senha</label>
+            <input type="password" id="confPassword" placeholder="Confirme sua senha">
+            <i class="fas fa-key"></i>
+        </div>
+        <div class="input-field">
+            <button id="register" onclick="userRegister()">Enviar</button>
+        </div>
+        <p>Já possui conta? <a href="login.html">Login</a></p>
+    </div>
     </div>
     <script src="js/middleware/isAuth.js"></script>
-    <script src="js/register.js"></script>
+    <script src="js/user.js"></script>
 </body>
-
 </html>
